# qr-builder

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  INSTALL.md  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  server.py
.github/workflows/: ci.yml
docs/: API.md  NEXTJS_INTEGRATION.md  api.md  getting-started.md  index.md
qr_builder/: __init__.py  api.py  auth.py  cli.py  config.py  core.py
tests/: __init__.py  test_api.py  test_core.py
wordpress/: README.md  qr-builder-widget.html
